--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cellXplore</title>
+    <!-- Add this line for the favicon -->
+    <link rel="icon" href="/cellXplore.png" type="image/png" />
   </head>
   <body>
     <div id="root"></div>
